--- a/index.html
+++ b/index.html
@@ -18,8 +18,30 @@
   <body>
     <header>
       <div class="logo">
-        <img src="images/devAden.jpg" alt="" />
+        <img src="images/characterIcon.jpg" alt="" />
       </div>
+      <button class="nav-toggle" aria-label="toggle navigation">
+        <span class="hamburger"></span>
+      </button>
+      <nav class="nav">
+        <ul class="nav__list">
+          <li class="nav__item"><a href="#home" class="nav__link"></a>Home</li>
+          <li class="nav__item">
+            <a href="#" class="nav__link"></a>My services
+          </li>
+          <li class="nav__item"><a href="#" class="nav__link"></a>About me</li>
+          <li class="nav__item"><a href="#" class="nav__link"></a>My work</li>
+        </ul>
+      </nav>
     </header>
+
+    <!-- Introduction -->
+    <section class="intro" id="home">
+      <h1 class="section__title section__title--intro">
+        Hi, I am <strong>Aden Cronje</strong>
+      </h1>
+      <p class="section__subtitle section__subtitle--intro">front-end dev</p>
+      <img src="images/devAden.jpg" alt="a picture of Aden Cronje" />
+    </section>
   </body>
 </html>
