Completed Intro section and added service section

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <ul class="nav__list">
           <li class="nav__item"><a href="#home" class="nav__link"></a>Home</li>
           <li class="nav__item">
-            <a href="#" class="nav__link"></a>My services
+            <a href="#services" class="nav__link"></a>My services
           </li>
           <li class="nav__item"><a href="#" class="nav__link"></a>About me</li>
           <li class="nav__item"><a href="#" class="nav__link"></a>My work</li>
@@ -42,6 +42,36 @@
       </h1>
       <p class="section__subtitle section__subtitle--intro">front-end dev</p>
       <img src="images/devAden.jpg" alt="a picture of Aden Cronje" />
+
+      <!-- My services -->
+      <section class="my-services" id="services">
+        <h2 class="section__title section__title--services">What I do</h2>
+        <div class="services">
+          <div class="service">
+            <h3></h3>
+            <p></p>
+          </div>
+
+          <!-- / service -->
+
+          <div class="service">
+            <h3></h3>
+            <p></p>
+          </div>
+
+          <!-- / service -->
+
+          <div class="service">
+            <h3></h3>
+            <p></p>
+          </div>
+
+          <!-- / service -->
+        </div>
+        <!-- / services -->
+
+        <a href="#work" class="btn">My Work</a>
+      </section>
     </section>
   </body>
 </html>
