Added more img's

--- a/index.html
+++ b/index.html
@@ -29,8 +29,12 @@
           <li class="nav__item">
             <a href="#services" class="nav__link"></a>My services
           </li>
-          <li class="nav__item"><a href="#" class="nav__link"></a>About me</li>
-          <li class="nav__item"><a href="#" class="nav__link"></a>My work</li>
+          <li class="nav__item">
+            <a href="#about" class="nav__link"></a>About me
+          </li>
+          <li class="nav__item">
+            <a href="#work" class="nav__link"></a>My work
+          </li>
         </ul>
       </nav>
     </header>
@@ -42,36 +46,68 @@
       </h1>
       <p class="section__subtitle section__subtitle--intro">front-end dev</p>
       <img src="images/devAden.jpg" alt="a picture of Aden Cronje" />
-
-      <!-- My services -->
-      <section class="my-services" id="services">
-        <h2 class="section__title section__title--services">What I do</h2>
-        <div class="services">
-          <div class="service">
-            <h3></h3>
-            <p></p>
-          </div>
-
-          <!-- / service -->
-
-          <div class="service">
-            <h3></h3>
-            <p></p>
-          </div>
-
-          <!-- / service -->
-
-          <div class="service">
-            <h3></h3>
-            <p></p>
-          </div>
-
-          <!-- / service -->
+    </section>
+    <!-- My services -->
+    <section class="my-services" id="services">
+      <h2 class="section__title section__title--services">What I do</h2>
+      <div class="services">
+        <div class="service">
+          <h3>Design + Development</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat.
+          </p>
         </div>
-        <!-- / services -->
 
-        <a href="#work" class="btn">My Work</a>
-      </section>
+        <!-- / service -->
+
+        <div class="service">
+          <h3>/E-commerce</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat.
+          </p>
+        </div>
+
+        <!-- / service -->
+
+        <div class="service">
+          <h3>WordPress</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat.
+          </p>
+        </div>
+
+        <!-- / service -->
+      </div>
+      <!-- / services -->
+
+      <a href="#work" class="btn">My Work</a>
+    </section>
+
+    <!-- About me -->
+    <section class="about-me" id="about">
+      <h2 class="section__title section__title--about">Who I am</h2>
+      <p class="section__subtitle section__subtitle--about"></p>
+
+      <div class="about-me__body">
+        <p></p>
+        <p></p>
+      </div>
+
+      <img src="images/posingAden.png" alt="Jane leaning against a bus" />
+    </section>
+    <!-- My work -->
+    <section class="my-work" id="work">
+     
+    
     </section>
   </body>
 </html>
