--- a/index.html
+++ b/index.html
@@ -14,11 +14,19 @@
       integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc="
       crossorigin="anonymous"
     />
+
+    <!-- Update these with your own fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|Source+Sans+Pro:300,900&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <header>
       <div class="logo">
-        <img src="images/characterIcon.jpg" alt="" />
+        <img src="" alt="" />
       </div>
       <button class="nav-toggle" aria-label="toggle navigation">
         <span class="hamburger"></span>
@@ -45,7 +53,11 @@
         Hi, I am <strong>Aden Cronje</strong>
       </h1>
       <p class="section__subtitle section__subtitle--intro">front-end dev</p>
-      <img src="images/devAden.jpg" alt="a picture of Aden Cronje" />
+      <img
+        src="images/devAden.jpg"
+        alt="a picture of Aden Cronje"
+        class="intro__img"
+      />
     </section>
     <!-- My services -->
     <section class="my-services" id="services">
