--- a/index.html
+++ b/index.html
@@ -107,7 +107,9 @@
     <!-- About me -->
     <section class="about-me" id="about">
       <h2 class="section__title section__title--about">Who I am</h2>
-      <p class="section__subtitle section__subtitle--about"></p>
+      <p class="section__subtitle section__subtitle--about">
+        Designer & developer based out of CPT
+      </p>
 
       <div class="about-me__body">
         <p>
