--- a/index.html
+++ b/index.html
@@ -126,12 +126,18 @@
         </p>
       </div>
 
-      <img src="images/posingAden.png" alt="Jane leaning against a bus" />
+      <img
+        src="images/posingAden.png"
+        alt="Jane leaning against a bus"
+        class="about-me__image"
+      />
     </section>
     <!-- My work -->
     <section class="my-work" id="work">
-      <h2 class="section__title">My work</h2>
-      <p class="section__subtitle"></p>
+      <h2 class="section__title section__title--work">My work</h2>
+      <p class="section__subtitle section__subtitle--work">
+        A selection of my work
+      </p>
 
       <div class="portfolio">
         <!-- Portfolio item 01 -->
@@ -192,16 +198,24 @@
       <a href="mailto:hello@jane.dev" class="footer__link">hello@jane.dev</a>
       <ul class="social-list">
         <li class="social-list__item">
-          <a class="social-list__link" href="https://codepen.io">a</a>
+          <a class="social-list__link" href="https://codepen.io"
+            ><i class="fa-brands fa-codepen"></i
+          ></a>
         </li>
         <li class="social-list__item">
-          b<a class="social-list__link" href="http://dribbble.com"></a>
+          <a class="social-list__link" href="http://discord.com"
+            ><i class="fa-brands fa-discord"></i
+          ></a>
         </li>
         <li class="social-list__item">
-          <a class="social-list__link" href="https://twitter.com">c</a>
+          <a class="social-list__link" href="https://www.linkedin.com/"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
         </li>
         <li class="social-list__item">
-          <a class="social-list__link" href="https://github.com">d</a>
+          <a class="social-list__link" href="https://github.com"
+            ><i class="fa-brands fa-github"></i
+          ></a>
         </li>
       </ul>
     </footer>
