Encapsulated about me section in new div

--- a/index.html
+++ b/index.html
@@ -106,11 +106,17 @@
 
     <!-- About me -->
     <section class="about-me" id="about">
-      <h2 class="section__title section__title--about">Who I am</h2>
-      <p class="section__subtitle section__subtitle--about">
-        Designer & developer based out of CPT
-      </p>
-
+      <div>
+        <h2 class="section__title section__title--about">Who I am</h2>
+        <p class="section__subtitle section__subtitle--about">
+          Designer & developer based out of CPT
+        </p>
+        <img
+          src="images/posingAden.png"
+          alt="Jane leaning against a bus"
+          class="about-me__image"
+        />
+      </div>
       <div class="about-me__body">
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -125,12 +131,6 @@
           aliquip ex ea commodo consequat.
         </p>
       </div>
-
-      <img
-        src="images/posingAden.png"
-        alt="Jane leaning against a bus"
-        class="about-me__image"
-      />
     </section>
     <!-- My work -->
     <section class="my-work" id="work">
